tests/invalid/set_magic_and_missing_elem_eq/main.py
def run_case() -> None:
    a: set[set[int]] = set()
    b: set[set[int]] = set()
    out: set[set[int]] = a.__and__(b)
    print(out)


if __name__ == "__main__":
    run_case()
